test/errors/type/list/push.yasl
mt.lookup([], .push)(1, true)
